--- a/src/chapter01_02.tex
+++ b/src/chapter01_02.tex
@@ -1,4 +1,4 @@
-
+\chapter{2}\label{ch:2}
 \section{Matrices}
 
 Mientras no se indique lo contrario, las matrices son cuadradas, de dimensión $n$ y sobre el cuerpo de los números complejos.
