--- a/src/chapter01_03.tex
+++ b/src/chapter01_03.tex
@@ -1,3 +1,4 @@
+\chapter{3}\label{ch:3}
 \section{Estadística y probabilidad}
 \subsection{Estadística}
 Si $L=\{x_i\}$ es una lista finita de $n$ valores, definimos la relación de equivalencia sobre los índices siguiente: $i\sim j$ si $x_i = x_j$. Llamamos $I$ al cojunto cociente, $f(i)$ al cardinal de $[i]$, es decir, el número de veces que el valor $x_i$ se repite en $L$. De esta manera obtenemos el conjunto de pares $\{(x_i, f(i))\ \forall i\in I\}$ y construimos el conjunto formado por dichos pares, y donde  definimos:
