--- a/src/chapter03_01.tex
+++ b/src/chapter03_01.tex
@@ -1,3 +1,4 @@
+\chapter{4}\label{ch:4}
 \section{Definiciones y notación}
 \begin{definicion}
     Sea $I$ un intervalo abierto de $\R$. Llamamos \define{Espacio cuántico de $I$} a
