--- a/src/chapter_hilbert.tex
+++ b/src/chapter_hilbert.tex
@@ -1,3 +1,4 @@
+\chapter{5}\label{ch:5}
 \section{Espacios Cuánticos}
 A partir de este punto, vamos a usar la notación cuántica de Dirac:
 \begin{itemize}
