--- a/src/formularios.tex
+++ b/src/formularios.tex
@@ -1,3 +1,4 @@
+\chapter{Formularios}\label{ch:formularios}
 \begin{summary}
     En este capítulo vamos a recoger todas las ecuaciones, fórmulas, resultados que hemos usado de forma ?
     
