--- a/src/main.tex
+++ b/src/main.tex
@@ -16,28 +16,23 @@
     {Autor independiente}
     {Murcia}
 
-    \printglossaries
-    \overfullrule=5mm
-    \chapter{La chapa}\label{ch:la-chapa}
-    \input{intro}
+    %\printglossaries
 
-    \chapter{1}\label{ch:1}
-    \input{chapter01_01.tex}
-    \chapter{2}\label{ch:2}
-    \input{chapter01_02.tex}
-    \chapter{3}\label{ch:3}
-    \input{chapter01_03.tex}
-    \chapter{4}\label{ch:4}
-    \input{chapter03_01.tex}
-    \chapter{5}\label{ch:5}
-    \input{chapter_hilbert.tex}
-    \chapter{6}\label{ch:6}
-    \input{chapter_operadores.tex}
+    %\input{chapter01_01.tex}
 
-    \chapter{Formularios}\label{ch:formularios}
-    \input{formularios.tex}
-    \addcontentsline{toc}{chapter}{\textcolor{tssteelblue}{Literature}}
+    %\input{chapter01_02.tex}
 
+    %\input{chapter01_03.tex}
+
+    %\input{chapter03_01.tex}
+
+    %\input{chapter_hilbert.tex}
+
+    %\input{chapter_operadores.tex}
+
+    %\input{formularios.tex}
+
+    \addcontentsline{toc}{chapter}{\textcolor{tssteelblue}{Literatura}}
     \printbibliography{}
     \printindex
 
