Imagen de onda con coseno con gnuplot

--- a/src/main.tex
+++ b/src/main.tex
@@ -3,6 +3,7 @@
 \usepackage{glossaries}
 \usepackage{tikz-cd}
 
+\graphicspath{{gnuplot/}{../gnuplot/}}
 \input{personalizacion.tex}
 \makeglossaries
 \overfullrule=1mm
@@ -17,6 +18,8 @@
     {Murcia}
 
     %\printglossaries
+
+    \input{clasico_a_cuantico.tex}
 
     %\input{chapter01_01.tex}
 
