--- a/src/personalizacion.tex
+++ b/src/personalizacion.tex
@@ -33,3 +33,4 @@ cartas locales}}
 \providecommand{\glossarydef}[3]{\newglossaryentry{#1}{name={#2},description={#3}}\gls{#1}}
 \providecommand{\lie}[2]{[#1\coma #2]}
 \providecommand{\metrica}{\mathsf{g}}
+\providecommand{\vec}[1]{\overrightarrow{#1}}
