--- a/src/clasico_a_cuantico.tex
+++ b/src/clasico_a_cuantico.tex
@@ -6,8 +6,9 @@ La magnitud física cuya perturbación se propaga se expresa como una función t
 $\psi(\vec{r},t)$.
 
 Matemáticamente se dice que dicha función es una onda si verifica la ecuación de ondas:
-\begin{equation}\label{eq:ecuacion-onda}
-\nabla^2\psi(\vec {r},t)=\frac {1}{v^2}\frac{\partial^2\psi}{\partial t^2}(\vec {r},t)
+\begin{equation}
+    \label{eq:ecuacion-onda}
+    \nabla^2\psi(\vec {r},t)=\frac {1}{v^2}\frac{\partial^2\psi}{\partial t^2}(\vec {r},t)
 \end{equation}
 donde $v$ es la velocidad de propagación de la perturbación.
 
@@ -30,28 +31,97 @@ donde $v$ es la velocidad de propagación de la perturbación.
 Aplicando las definiciones anteriores, tenemos: $k=\frac{2\pi}{\lambda}$, $\nu=\frac{1}{T}$,
 $v_f=\frac{\lambda}{T}=\nu\lambda$ y $\omega=2\pi\nu$.
 
-\begin{figure}[b]
+\begin{figure}[htbp]
     \centering
-    \includegraphics{coseno.pdf}
+    \includegraphics[width=0.6\textwidth]{sin.png}
     \caption{Elementos de una onda}
     \label{fig:elementos-onda}
 \end{figure}
 
 \subsection{Soluciones a la ecuación de onda}\label{subsec:soluciones-a-la-ecuación-de-onda}
-La solución más sencilla a la ecuación de ondas es considerar una onda plana que se desplaza longitudinálmente en la
-dirección de la onda, donde si situamos el sistema de referencia en un punto de equilibrio tenemos la solución:
+La solución más sencilla a la ecuación de ondas es considerar una onda plana que se desplaza longitudinalmente en la dirección de la onda, donde si situamos el sistema de referencia en un punto de equilibrio tenemos la solución:
 \begin{equation}
     \label{eq:solucion-ecuacion-ondas-simple}
-    \psi(x,t)=A(x,t)\sin(\omega t-kx)
+    \psi(x,t)=A\sin(\omega t-kx)
+\end{equation}
+
+Pero la luz en una onda electro-magnética y como ya apreción Maxwell, el campo magnético aporta una componente a las ecuaciones en forma de onda compleja, y en este caso, la solución más sencilla de onda electro-magnética plana que se desplaza longitudinalmente en la dirección de la onda es:
+\begin{equation}
+    \label{eq:solucion-ecuacion-ondas-complejas-simple}
+    \psi(x,t)=Ae^{i(\omega t-kx)}
 \end{equation}
 
 \section{Dualidad onda-partícula de De Broglie}\label{sec:dualidad-onda-partícula-de-de-broglie}
 
-Si los fotones son partículas y ondas a la vez, podemos usar el postulado de la mecánica relativista para partículas
-con masa, donde la energía de una partícula es $E=m c^2$, y a la vez, usar el resultado de Planck sobre las energías
-de una onda, donde $E=h\nu$. Así pues igualando ambas energías se tiene que $m c^2=h\nu$, pero como la velocidad de
-una onda es igual al producto de la frecuencia y la longitud de onda, tendremos que:
+Si los fotones son partículas y ondas a la vez, podemos usar el postulado de la mecánica relativista de Einstein para partículas, y a la vez, el postulado de Planck para ondas.
+
+\begin{postulate}[Valor de la energía de las ecuaciones de Einstein]
+    \label{pos:energia_einstein}
+    E=mc^2=pc
+\end{postulate}
+
+\begin{postulate}[Valor de la energía de las ecuaciones de Planck]
+    \label{pos:energia_planck}
+    E=h\nu=\frac{hc}{\lambda}
+\end{postulate}
+
+Así pues igualando ambas energías obtenemos la relación para cada partícula entre su momento y su longitud de onda:
+\begin{postulate}[Relación entre longitud de onda y momento de De Broglie]
+    \label{pos:dualidad_de_broglie}
+    \lambda=\frac{h}{p}
+\end{postulate}
+
+\begin{example}
+    Calcular la longitud de onda de una persona de masa $8$ kg cuando anda a una velocidad de $45$ km/h.
+
+    La persona tiene un momento de $8*45*1000/3600=1000$ Kg m/s. Así que la longitud de onda asociada es de $\lambda=\frac{6,6256*10^{-34}}{1000}=6,6256*10^{-37}$ metros.
+\end{example}
+
+\begin{note}
+    La longitud de onda más pequeña que actualmente podemos observar es del orden de $10^{-20}$ metros con el \textbf{Cherenkov telescope array}.
+\end{note}
+
+\subsection{Conclusiones}
+Usando la nueva relación entre longitud de onda y momento, podemos obtener las siguientes igualdades:
 \begin{equation}
-    \label{eq:dualidad-onda-particula}
-h\nu = m c^2 = m c c = p \nu\lambda\so h = p\lambda\so \lambda = \frac{h}{p}
+    \label{eq:k_debroglie}
+    k=\frac{2\pi}{\lambda}\by{\ref{pos:dualidad_de_broglie}}\frac{2\pi p}{h}=\frac{p}{\hbar}
 \end{equation}
+\begin{equation}
+    \label{eq:omega_planck}
+    \omega=2\pi\nu\by{\ref{pos:energia_planck}}2\pi\frac{E}{h}=\frac{E}{\hbar}
+\end{equation}
+\begin{equation}
+    \label{eq:omega_debroglie}
+    \omega\by{\ref{eq:omega_planck}}\frac{E}{\hbar}=\frac{p^2}{2m\hbar}\by{\ref{pos:dualidad_de_broglie}}\frac{h^2}{\lambda^2 2m\hbar}=\frac{2\pi h}{\lambda^2 2m}=\frac{\hbar k^2}{2m}
+\end{equation}
+\begin{equation}
+    \label{eq:frecuencia_debroglie}
+    \nu\by{\ref{pos:energia_planck}}\frac{E}{h}=\frac{p^2}{2mh}\by{\ref{pos:dualidad_de_broglie}}\frac{h^2}{2mh\lambda^2}=\frac{h}{2m\lambda^{2}}
+\end{equation}
+
+\subsection{Solución de onda momento-energía}\label{subsec:solucion-de-onda-momento-energia}
+Una consecuencia interesante de la dualidad onda-partícula de De Blogie, es poder expresar la solución de onda electro-magnética en función de su energía y su momento.
+
+\begin{equation}
+    \label{eq:ecuacion_onda_momento_energia}
+    \psi(x,t)=Ae^{i(\omega t-kx)}\by{\ref{eq:omega_planck} y \ref{eq:k_debroglie}}Ae^{i(\frac{E}{\hbar} t-\frac{p}{\hbar}x)}=Ae^{i(\hbar^{-1}(E t-p x))}
+\end{equation}
+
+\subsection{Desarrollo de la ecuación de Schröndiger}\label{subsec:desarrollo-de-la-ecuación-de-schrondiger}
+
+Partimos de la solución de onda momento-energía (\ref{eq:ecuacion_onda_momento_energia}), calculamos la derivada parcial respecto del tiempo y la segunda derivada parcial respecto del espacio dos veces y recordando que la energia es la suma de la energía cinética y energía potencial.
+\begin{equation*}
+    \frac{\partial\psi}{\partial x}=\frac{ip}{\hbar}\psi\text{ y }\frac{\partial^2\psi}{\partial x^2}=\frac{-p^2}{\hbar^2}\psi
+\end{equation*}
+
+\begin{equation*}
+    \frac{\partial\psi}{\partial t}=\frac{-iE}{\hbar}\psi=\frac{-ip^2}{2m\hbar}\psi+\frac{-iV}{\hbar}\psi=\frac{-i\hbar}{2m}\frac{p^2}{\hbar^2}\psi+\frac{-iV}{\hbar}\psi=\frac{i\hbar}{2m}\frac{\partial^2\psi}{\partial x^2}+\frac{-iV}{\hbar}\psi\so
+\end{equation*}
+
+\begin{equation}
+    \label{eq:desarrollo-3ecuacion-schrodinger}
+    i\hbar\frac{\partial\psi}{\partial t}=\frac{-\hbar^2}{2m}\frac{\partial^2\psi}{\partial x^2}+V\psi
+\end{equation}
+
+
