Recuperado algunas partes del texto anterior

--- a/src/clasico_a_cuantico.tex
+++ b/src/clasico_a_cuantico.tex
@@ -1,3 +1,4 @@
+\chapter{De lo clásico a lo cuántico}
 \section{La onda}\label{sec:la-onda}
 
 Para la física, una onda consiste en la propagación de una perturbación de energía sin transporte de materia.
