--- a/src/espacios_de_hilbert.tex
+++ b/src/espacios_de_hilbert.tex
@@ -1,4 +1,21 @@
 \chapter{1}\label{ch:1}
+\section{Espacios Cuánticos}
+A partir de este punto, vamos a usar la notación cuántica de Dirac:
+\begin{itemize}
+  \item Denotaremos por $\mathbb{H}$ a los espacios de Hilbert y a sus vectores por $\ket{x}$.
+  \item Llamamos operadores a los homomorfismos entre espacios de Hilbert y los denotamos por $\hat{f}$.
+  \item Denotaremos a la función dual de $\ket{x}$ por $\bra{x}$.
+  \item Denotaremos al producto escalar de $\ket{x}$ y $\ket{y}$ por $\braket{x}{y}$.
+  \item Denotaremos la expresión $\operatoravg{x}{\hat{f}}{y}$ al producto escalar de ${\ket{x}}$ y $\ket{\hat{f}(y)}$.
+\end{itemize}
+
+\subsection{Espacios de Hilbert}
+
+Sea $B$ un conjunto, llamamos \define{$L^2(B)$} al conjunto de las aplicaciones $f:B\rightarrow\C$ que cumplen $\sum_{b\in B}\nor{f(b)}^2 < \infty$ junto con el producto interno $\braket{f}{g}=\sum_{b\in B}\overline{f(b)}g(b)$.
+
+\begin{resultado}
+  Tanto $L^2(\R)$ como $L^2(\C)$ son espacios de Hilbert.
+\end{resultado}
 
 \section{El camino a los espacios de Hilbert}
 Mientras no se indique lo contrario, siempre un espacio vectorial será un $\C$-espacio vectorial.
