--- a/src/main.tex
+++ b/src/main.tex
@@ -28,24 +28,24 @@
 
     \mainmatter
 
+    \input{convenio.tex}
     \input{clasico_a_cuantico.tex}
+    \input{ecuación de Schrödinger.tex}
 
-    %\input{chapter01_01.tex}
+    %\input{espacios_de_hilbert.tex}
 
-    %\input{chapter01_02.tex}
+    %\input{matrices.tex}
 
-    %\input{chapter01_03.tex}
+    %\input{estadistica_probabilidad.tex}
 
-    %\input{chapter03_01.tex}
+    %\input{espacio_cuantico.tex}
 
-    %\input{chapter_hilbert.tex}
+    %\input{operadores.tex}
 
-    %\input{chapter_operadores.tex}
-
-    %\input{formularios.tex}
+    \input{formulario.tex}
 
 
-    \input{elegantbook.tex}
+    %\input{elegantbook.tex}
     \printbibliography
 
 \end{document}
