--- a/src/clasico_a_cuantico.tex
+++ b/src/clasico_a_cuantico.tex
@@ -1,4 +1,6 @@
 \chapter{De lo clásico a lo cuántico}
+
+
 \section{La onda}\label{sec:la-onda}
 
 Para la física, una onda consiste en la propagación de una perturbación de energía sin transporte de materia.
@@ -20,7 +22,7 @@ donde $v$ es la velocidad de propagación de la perturbación.
     \item[Valle.] El punto de máxima elongación de la onda, en sentido opuesto a la cresta.
     \item[Amplitud ($A$).] La distancia vertical desde una cresta hasta el punto de equilibrio.
     \item[Longitud de onda ($\lambda$).] La distancia entre dos crestas consecutivas.
-    \item[Número de onda angular ($k$)]. La inversa de la longitud de onda en radianes.
+    \item[Número de onda angular ($k$).] La inversa de la longitud de onda en radianes.
     \item[Periodo ($T$).] El tiempo empleado en completar una longitud de onda.
     \item[Frecuencia ($\nu$).] El número de periodos por unidad de tiempo.
     \item[Frecuencia angular ($\omega$).] La frecuencia en radianes por segundo.
@@ -30,7 +32,7 @@ donde $v$ es la velocidad de propagación de la perturbación.
 \end{description}
 
 Aplicando las definiciones anteriores, tenemos: $k=\frac{2\pi}{\lambda}$, $\nu=\frac{1}{T}$,
-$v_f=\frac{\lambda}{T}=\nu\lambda$ y $\omega=2\pi\nu$.
+$v_f=\frac{\lambda}{T}=\frac{\nu}{k}$ y $\omega=2\pi\nu$.
 
 \begin{figure}[htbp]
     \centering
@@ -51,6 +53,7 @@ Pero la luz en una onda electro-magnética y como ya apreción Maxwell, el campo
     \label{eq:solucion-ecuacion-ondas-complejas-simple}
     \psi(x,t)=Ae^{i(\omega t-kx)}
 \end{equation}
+
 
 \section{Dualidad onda-partícula de De Broglie}\label{sec:dualidad-onda-partícula-de-de-broglie}
 
@@ -125,4 +128,34 @@ Partimos de la solución de onda momento-energía (\ref{eq:ecuacion_onda_momento
     i\hbar\frac{\partial\psi}{\partial t}=\frac{-\hbar^2}{2m}\frac{\partial^2\psi}{\partial x^2}+V\psi
 \end{equation}
 
+\subsection{El operador momento}
 
+Si consideramos un fotón, cuya ecuación de onda asociada es $\psi(x,y,z,t)=\phi(x,y,z)e^{-i2\pi f/t}$ y volviendo a aplicar la ecuación de onda $\nabla^2\psi(\vec {r},t)=\frac {1}{c^2}\frac{\partial^2\psi}{\partial t^2}(\vec {r},t)$ junto con las igualdades encontradas obtenemos:
+
+\begin{equation*}
+    \frac{\partial^2 \psi}{\partial t^2}=-4\pi^2 f^2\psi\by{\ref{pos:energia_planck}}\frac{-4\pi^2 E^2}{h^2}\psi=-\frac{E^2}{\hbar^2}\psi
+\end{equation*}
+
+Ahora usamos la ecuación de onda para obtener que
+\begin{equation}
+    \label{eq:momento_cuadratico}
+    \nabla^2\psi=\frac {1}{c^2}\frac{\partial^2\psi}{\partial t^2}=-\frac {E^2}{\hbar^2 c^2}\psi\by{\ref{pos:energia_einstein}}-\frac {m^2c^4}{\hbar^2 c^2}\psi=-\frac {m^2 c^2}{\hbar^2}\psi=-\frac {p^2}{\hbar^2}\psi\so p^2\psi=-\hbar^2\nabla^2\psi
+\end{equation}
+
+Usando esta nueva igualdad en \ref{eq:desarrollo-3ecuacion-schrodinger} tenemos:
+\begin{equation}
+    \label{eq:ecuacion-schrondinger-energia}
+    i\hbar\frac{\partial\psi}{\partial t}=\frac{p^2}{2m}\psi+V\psi=(\frac{p^2}{2m}+V)\psi=E\psi
+\end{equation}
+
+Hemos obtenido dos expresiones muy importantes en la mecánica cuántica, si consideramos el momento y la energía como funcionales, tenemos:
+\begin{subequations}
+    \begin{equation}
+        \label{eq:energia_momento}
+        \^E=i\hbar\frac{\partial}{\partial t}
+    \end{equation}
+    \begin{equation}
+        \label{eq:operador_momento}
+        \^p^2=-\hbar^2\nabla^2\so\^p=-i\hbar\nabla
+    \end{equation}
+\end{subequations}
