--- a/src/espacios_de_hilbert.tex
+++ b/src/espacios_de_hilbert.tex
@@ -1,5 +1,6 @@
-\chapter{1}\label{ch:1}
-\section{Espacios Cuánticos}
+\chapter{Espacios de Hilbert}
+
+\section{Notación Cuántica}
 A partir de este punto, vamos a usar la notación cuántica de Dirac:
 \begin{itemize}
   \item Denotaremos por $\mathbb{H}$ a los espacios de Hilbert y a sus vectores por $\ket{x}$.
@@ -9,21 +10,12 @@ A partir de este punto, vamos a usar la notación cuántica de Dirac:
   \item Denotaremos la expresión $\operatoravg{x}{\hat{f}}{y}$ al producto escalar de ${\ket{x}}$ y $\ket{\hat{f}(y)}$.
 \end{itemize}
 
-\subsection{Espacios de Hilbert}
-
-Sea $B$ un conjunto, llamamos \define{$L^2(B)$} al conjunto de las aplicaciones $f:B\rightarrow\C$ que cumplen $\sum_{b\in B}\nor{f(b)}^2 < \infty$ junto con el producto interno $\braket{f}{g}=\sum_{b\in B}\overline{f(b)}g(b)$.
-
-\begin{resultado}
-  Tanto $L^2(\R)$ como $L^2(\C)$ son espacios de Hilbert.
-\end{resultado}
-
-\section{El camino a los espacios de Hilbert}
 Mientras no se indique lo contrario, siempre un espacio vectorial será un $\C$-espacio vectorial.
 
 \subsection{Espacios métricos}
 \begin{definicion}
   \label{distancia}
-  Sea $E$ un espacio vectorial, diremos que la aplicación $d:E \rightarrow \R$ es una \define{métrica} sobre $E$ si cumple:
+  Sea $E$ un espacio vectorial, diremos que la aplicación $d:E \rightarrow \R$ es una \define{métrica}{métrica} sobre $E$ si cumple:
   \begin{itemize}
     \item $\forall x,y \in E,\ d(x,y)=d(y,x)$.
     \item $\forall x,y,z \in E,\ d(x,z)\leq d(x, y)+d(y, z)$.
