--- a/src/main.tex
+++ b/src/main.tex
@@ -29,10 +29,12 @@
     \mainmatter
 
     \input{convenio.tex}
+    \input{mecanica_lagrangiana.tex}
+    \input{mecanica_hamiltoniana.tex}
     \input{clasico_a_cuantico.tex}
     \input{ecuación de Schrödinger.tex}
 
-    %\input{espacios_de_hilbert.tex}
+    \input{espacios_de_hilbert.tex}
 
     %\input{matrices.tex}
 
