Añadido paquete mandi

--- a/src/convenio.tex
+++ b/src/convenio.tex
@@ -7,9 +7,9 @@
         \toprule
         Constante & Nomenclatura & Valor & Unidades\\
         \midrule
-        Velocidad de la luz en el vacio & $c$ & $299792,458$ & km/s\\
-        Planck & $h$ & $6,626070150 \times 10^{-34}$ & Js\\
-        Dirac & $\hbar=h/(2\pi)$ & $1,054571818\times 10^{-34}$ & Js\\
+        Velocidad de la luz en el vacio & $\speedoflightmathsymbol$ & $\speedoflightprecisevalue$ & $\speedoflightonlyalternateunits$\\
+        Planck & $\planckmathsymbol$ & $\planckprecisevalue$ & $\planckonlyalternateunits$\\
+        Dirac & $\planckbarmathsymbol=\planckmathsymbol/(2\pi)$ & $\planckbarprecisevalue$ & $\planckbaronlyalternateunits$\\
         \bottomrule
     \end{tabular}
 \end{table}
