--- a/src/main.tex
+++ b/src/main.tex
@@ -1,6 +1,8 @@
 \documentclass[11pt,fancy]{elegantbook}
 
 \usepackage{tikz-cd}
+\usepackage{mandi}
+\usepackage{mandistudent}
 \input{personalizacion.tex}
 
 \title{Apuntes en mecánica cuántica}
