--- a/src/personalizacion.tex
+++ b/src/personalizacion.tex
@@ -20,8 +20,7 @@
 \providecommand{\pari}[2]{(#1,\thinspace #2)}
 \providecommand{\cartalocal}{(\mathcal{M}^n,\thinspace p,\thinspace U,\thinspace \varphi)\textmd{ una carta local}}
 \providecommand{\doscartaslocales}{(\mathcal{M}^n\coma p\coma U\coma\varphi)\textmd{ y } (\mathcal{N}^m\coma q\coma
-V\coma\psi)\textmd{ dos
-cartas locales}}
+V\coma\psi)\textmd{ dos cartas locales}}
 \providecommand{\indexdots}[3]{#1=#2,\ldots,#3}
 \providecommand{\define}[2]{\textbf{#1}\label{def:#2}}
 \providecommand{\avg}[1]{\left\langle#1\right\rangle}
