Fin del lagrangiano

--- a/src/mecanica_lagrangiana.tex
+++ b/src/mecanica_lagrangiana.tex
@@ -5,7 +5,7 @@
 
 El lagrangiano es una aplicación escalar definida sobre un cierto espacio de posibles estados del sistema, donde dicho sistema viene determinado en cada momento por la posición y velocidad de cada uno de sus componentes.
 
-El espacio de estados es una variedad diferenciable construida como el fibrado tangente $T\mathcal{M}$ de una variedad $\mathcal{M}$ y el lagrangiano es una función de la forma $\maps{L}{T\mathcal{M}\times\R}{\R}$.
+El espacio de estados es una variedad diferenciable construida como el fibrado tangente $T\mathcal{M}$ de una variedad $\mathcal{M}$ y el lagrangiano es una función de la forma $\maps{L}{\mathcal{M}\times T\mathcal{M}\times\R}{\R}$.
 
 Para la física clásica, el lagrangiano de un sistema, se forma mediante la energía cinética ($T$) y la energía potencial ($V$) de tal manera que:
 \begin{postulate}[Lagrangiano clásico en base a la energía]
