--- a/src/personalizacion.tex
+++ b/src/personalizacion.tex
@@ -33,3 +33,5 @@ V\coma\psi)\textmd{ dos cartas locales}}
 \providecommand{\lie}[2]{[#1\coma #2]}
 \providecommand{\metrica}{\mathsf{g}}
 \providecommand{\vec}[1]{\overrightarrow{#1}}
+\newcommand{\set}[1]{\left\{#1\right\}}
+\newcommand{\where}{\mathrel{}\middle|\mathrel{}}
